--- a/package.json
+++ b/package.json
@@ -8,9 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@casl/ability": "^6.3.1",
+    "@casl/vue": "^2.2.0",
+    "@popperjs/core": "^2.11.6",
+    "@vueup/vue-quill": "^1.0.0-beta.10",
+    "@vueuse/core": "^9.3.0",
+    "animate.css": "^4.1.1",
+    "apexcharts": "^3.35.5",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.22.0",
+    "bootstrap-vue-3": "^0.3.11",
     "core-js": "^3.8.3",
+    "swiper": "^8.4.2",
     "vue": "^3.2.13",
+    "vue-cleave-component": "^3.0.1",
+    "vue-i18n": "^9.2.2",
+    "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "^4.0.3",
+    "vue-select": "^4.0.0-beta.5",
+    "vue-slider-component": "^4.1.0-beta.2",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
